--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,25 @@ allprojects {
     }
 
     dependencies {
-        //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-web'
         runtimeOnly 'org.postgresql:postgresql'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+        // https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core
+        //implementation 'org.hibernate.orm:hibernate-core:6.1.3.Final'
+
     }
 
     tasks.named('test') {
         useJUnitPlatform()
     }
+
 }
 
+dependencies {
+    implementation project(':model')
+    implementation project(':repository')
+    implementation project(':service')
+    implementation project(':controller')
+}
