--- a/controller/build.gradle
+++ b/controller/build.gradle
@@ -3,4 +3,8 @@ dependencies {
     implementation project(':service')
     implementation project(':repository')
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
+
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
+
 }
