--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ allprojects {
     sourceCompatibility = 8
     targetCompatibility = 8
 
-
     repositories {
         mavenCentral()
     }
@@ -29,8 +28,11 @@ allprojects {
         runtimeOnly 'org.postgresql:postgresql'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-        // https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core
-        //implementation 'org.hibernate.orm:hibernate-core:6.1.3.Final'
+        // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
+        implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
+
+        // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-hateoas
+        implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.7.3'
 
     }
 
