--- a/controller/build.gradle
+++ b/controller/build.gradle
@@ -2,9 +2,8 @@ dependencies {
     implementation project(':model')
     implementation project(':service')
     implementation project(':repository')
-    // https://mvnrepository.com/artifact/org.postgresql/postgresql
+    implementation project(':exception')
 
-// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
 
 }
