--- a/service/build.gradle
+++ b/service/build.gradle
@@ -2,4 +2,7 @@ dependencies {
     implementation project(':model')
     implementation project(':repository')
     implementation project(':exception')
+
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testImplementation 'org.mockito:mockito-core:4.8.0'
 }
